<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="load_picture" translatable="false">Load Picture</string>
    <string name="load_video" translatable="false">Load Video</string>
    <string name="start_camera" translatable="false">Start Camera</string>
    <string name="instruction" translatable="false">Please press any button above to start</string>
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="continueRecognition">Continue</string>
    <string name="app_name">MY.KAMAZ</string>
    <string name="button_sett">Settings</string>
    <string name="button_camera">Camera</string>
    <string name="button_main">Main Menu</string>
    <string name="button_language_models">Language Models</string>
    <string name="button_special">Special Abilities</string>
    <string name="button_command_settings">Command Settings</string>
    <string name="special_abilities_header">Special Abilities</string>
    <string name="dobavleniecomm">Add Commands</string>
    <string name="apply">Apply</string>
    <string name="slangStartMusic">Drop the music</string>
    <string name="activity_id_textedit_hint">Activity ID (number)</string>
    <string name="voice_command">Voice command</string>
    <string name="settings_header">Settings</string>
    <string name="include_audio">Include Audio</string>
    <string name="include_gesture">Include Gesture</string>

</resources>
