<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.nssae.demo.SettingsActivity">

    <Button
        android:id="@+id/button_main_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_main"
        android:text="@string/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/button_language_models"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="@string/button_language_models"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_menu"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_special_abilities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_special"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_language_models"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_command_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_command_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_special_abilities"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_header"
        app:layout_constraintBottom_toTopOf="@+id/button_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />
</androidx.constraintlayout.widget.ConstraintLayout>